proglang/src/JapperParser.java
// Generated from C:/Users/user/Desktop/proglang\JapperParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JapperParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Try=1, Catch=2, Finally=3, Throw=4, Throws=5, Char=6, Boolean=7, Bit2=8, 
		Byte=9, Short=10, Int=11, Long=12, Float=13, Double=14, Do=15, While=16, 
		For=17, Loop=18, Until=19, If=20, Else=21, Switch=22, Case=23, Default=24, 
		Assert=25, Continue=26, Goto=27, Return=28, Break=29, In=30, Println=31, 
		Readln=32, Private=33, Protected=34, Public=35, Const=36, Enum=37, Final=38, 
		Static=39, Synchronized=40, Transient=41, Void=42, Volatile=43, Abstract=44, 
		Class=45, Extends=46, Implements=47, Import=48, Instanceof=49, Interface=50, 
		Native=51, New=52, Package=53, Strictfp=54, Super=55, This=56, BinVal=57, 
		QuatVal=58, OctVal=59, DecVal=60, HexVal=61, FloatingVal=62, FloatingHexVal=63, 
		BoolVal=64, True=65, False=66, CharVal=67, StringVal=68, NullVal=69, OpenPare=70, 
		ClosePare=71, OpenSqBrack=72, CloseSqBrack=73, OpenCurlyBrack=74, CloseCurlyBrack=75, 
		Semicolon=76, Comma=77, Dot=78, Gets=79, PlusEqual=80, MinusEqual=81, 
		TimesEqual=82, DivEqual=83, ModEqual=84, AndEqual=85, OrEqual=86, XorEqual=87, 
		ShiftLeftLogicalEqual=88, ShiftRightLogicalEqual=89, ShiftRightArithmeticEqual=90, 
		Negation=91, Increment=92, Decrement=93, Plus=94, Minus=95, Times=96, 
		Divide=97, Modulo=98, Greater=99, GreaterEqual=100, Less=101, LessEqual=102, 
		Equal=103, NotEqual=104, And=105, Or=106, BitwiseNot=107, BitwiseAnd=108, 
		BitwiseOr=109, BitwiseXor=110, ShiftLeftLogical=111, ShiftRightLogical=112, 
		ShiftRightArithmetic=113, Question=114, Colon=115, RightAngularBrack=116, 
		LeftAngularBrack=117, Ampersand=118, Assign=119, Pipe=120, Star=121, DotStar=122, 
		Arrow=123, DoubleColon=124, At=125, Ellipsis=126, Whitespace=127, MultilineComment=128, 
		InlineComment=129, VariableName=130;
	public static final int
		RULE_compilationUnit = 0, RULE_packageDeclaration = 1, RULE_importDeclaration = 2, 
		RULE_typeDeclaration = 3, RULE_classModifier = 4, RULE_accessModifiers = 5, 
		RULE_variableModifier = 6, RULE_classDeclaration = 7, RULE_genericTypes = 8, 
		RULE_genericType = 9, RULE_typeBound = 10, RULE_enumDeclaration = 11, 
		RULE_enumConstants = 12, RULE_enumConstant = 13, RULE_enumBodyDeclarations = 14, 
		RULE_interfaceDeclaration = 15, RULE_classBody = 16, RULE_interfaceBody = 17, 
		RULE_classBodyDeclaration = 18, RULE_memberDeclaration = 19, RULE_functionDeclaration = 20, 
		RULE_functionBody = 21, RULE_returnTypes = 22, RULE_genericFunctionDeclaration = 23, 
		RULE_genericConstructorDeclaration = 24, RULE_constructorDeclaration = 25, 
		RULE_fieldDeclaration = 26, RULE_interfaceBodyDeclaration = 27, RULE_interfaceMemberDeclaration = 28, 
		RULE_constDeclaration = 29, RULE_constantDeclarator = 30, RULE_interfaceFunctionDeclaration = 31, 
		RULE_interfaceFunctionModifier = 32, RULE_genericInterfaceFunctionDeclaration = 33, 
		RULE_variableDeclarators = 34, RULE_variableDeclarator = 35, RULE_variableDeclaratorId = 36, 
		RULE_variableInitializer = 37, RULE_arrayInit = 38, RULE_classOrInterfaceType = 39, 
		RULE_typeArgument = 40, RULE_variableOrMemberNameList = 41, RULE_functionParameters = 42, 
		RULE_functionParameterList = 43, RULE_functionParameter = 44, RULE_lastFunctionParameter = 45, 
		RULE_variableOrMemberName = 46, RULE_literal = 47, RULE_integerLiteral = 48, 
		RULE_floatLiteral = 49, RULE_elementValue = 50, RULE_elementValueArrayInit = 51, 
		RULE_defaultValue = 52, RULE_block = 53, RULE_blockStatement = 54, RULE_localVariableDeclaration = 55, 
		RULE_localTypeDeclaration = 56, RULE_statement = 57, RULE_catchBlock = 58, 
		RULE_catchType = 59, RULE_finallyBlock = 60, RULE_switchBlockStatementGroup = 61, 
		RULE_switchLabel = 62, RULE_forControl = 63, RULE_forInit = 64, RULE_forEach = 65, 
		RULE_parenthesisExpression = 66, RULE_expressionList = 67, RULE_functionCall = 68, 
		RULE_expression = 69, RULE_lambdaExpression = 70, RULE_lambdaParameters = 71, 
		RULE_lambdaBody = 72, RULE_primary = 73, RULE_classType = 74, RULE_creator = 75, 
		RULE_createdName = 76, RULE_innerCreator = 77, RULE_arrayCreatorRest = 78, 
		RULE_classCreatorRest = 79, RULE_explicitGenericInvocation = 80, RULE_typeArgumentsOrDiamond = 81, 
		RULE_nonWildcardTypeArgumentsOrDiamond = 82, RULE_nonWildcardTypeArguments = 83, 
		RULE_dataTypeList = 84, RULE_dataType = 85, RULE_primitiveDataTypes = 86, 
		RULE_typeArguments = 87, RULE_superSuffix = 88, RULE_explicitGenericInvocationSuffix = 89, 
		RULE_arguments = 90;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "packageDeclaration", "importDeclaration", "typeDeclaration", 
			"classModifier", "accessModifiers", "variableModifier", "classDeclaration", 
			"genericTypes", "genericType", "typeBound", "enumDeclaration", "enumConstants", 
			"enumConstant", "enumBodyDeclarations", "interfaceDeclaration", "classBody", 
			"interfaceBody", "classBodyDeclaration", "memberDeclaration", "functionDeclaration", 
			"functionBody", "returnTypes", "genericFunctionDeclaration", "genericConstructorDeclaration", 
			"constructorDeclaration", "fieldDeclaration", "interfaceBodyDeclaration", 
			"interfaceMemberDeclaration", "constDeclaration", "constantDeclarator", 
			"interfaceFunctionDeclaration", "interfaceFunctionModifier", "genericInterfaceFunctionDeclaration", 
			"variableDeclarators", "variableDeclarator", "variableDeclaratorId", 
			"variableInitializer", "arrayInit", "classOrInterfaceType", "typeArgument", 
			"variableOrMemberNameList", "functionParameters", "functionParameterList", 
			"functionParameter", "lastFunctionParameter", "variableOrMemberName", 
			"literal", "integerLiteral", "floatLiteral", "elementValue", "elementValueArrayInit", 
			"defaultValue", "block", "blockStatement", "localVariableDeclaration", 
			"localTypeDeclaration", "statement", "catchBlock", "catchType", "finallyBlock", 
			"switchBlockStatementGroup", "switchLabel", "forControl", "forInit", 
			"forEach", "parenthesisExpression", "expressionList", "functionCall", 
			"expression", "lambdaExpression", "lambdaParameters", "lambdaBody", "primary", 
			"classType", "creator", "createdName", "innerCreator", "arrayCreatorRest", 
			"classCreatorRest", "explicitGenericInvocation", "typeArgumentsOrDiamond", 
			"nonWildcardTypeArgumentsOrDiamond", "nonWildcardTypeArguments", "dataTypeList", 
			"dataType", "primitiveDataTypes", "typeArguments", "superSuffix", "explicitGenericInvocationSuffix", 
			"arguments"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "'('", "')'", 
			"'['", "']'", "'{'", "'}'", "';'", "','", "'.'", null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'?'", "':'", "'<'", "'>'", 
			"'&'", "'='", "'|'", "'*'", "'.*'", "'->'", "'::'", "'@'", "'...'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Try", "Catch", "Finally", "Throw", "Throws", "Char", "Boolean", 
			"Bit2", "Byte", "Short", "Int", "Long", "Float", "Double", "Do", "While", 
			"For", "Loop", "Until", "If", "Else", "Switch", "Case", "Default", "Assert", 
			"Continue", "Goto", "Return", "Break", "In", "Println", "Readln", "Private", 
			"Protected", "Public", "Const", "Enum", "Final", "Static", "Synchronized", 
			"Transient", "Void", "Volatile", "Abstract", "Class", "Extends", "Implements", 
			"Import", "Instanceof", "Interface", "Native", "New", "Package", "Strictfp", 
			"Super", "This", "BinVal", "QuatVal", "OctVal", "DecVal", "HexVal", "FloatingVal", 
			"FloatingHexVal", "BoolVal", "True", "False", "CharVal", "StringVal", 
			"NullVal", "OpenPare", "ClosePare", "OpenSqBrack", "CloseSqBrack", "OpenCurlyBrack", 
			"CloseCurlyBrack", "Semicolon", "Comma", "Dot", "Gets", "PlusEqual", 
			"MinusEqual", "TimesEqual", "DivEqual", "ModEqual", "AndEqual", "OrEqual", 
			"XorEqual", "ShiftLeftLogicalEqual", "ShiftRightLogicalEqual", "ShiftRightArithmeticEqual", 
			"Negation", "Increment", "Decrement", "Plus", "Minus", "Times", "Divide", 
			"Modulo", "Greater", "GreaterEqual", "Less", "LessEqual", "Equal", "NotEqual", 
			"And", "Or", "BitwiseNot", "BitwiseAnd", "BitwiseOr", "BitwiseXor", "ShiftLeftLogical", 
			"ShiftRightLogical", "ShiftRightArithmetic", "Question", "Colon", "RightAngularBrack", 
			"LeftAngularBrack", "Ampersand", "Assign", "Pipe", "Star", "DotStar", 
			"Arrow", "DoubleColon", "At", "Ellipsis", "Whitespace", "MultilineComment", 
			"InlineComment", "VariableName"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JapperParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JapperParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JapperParser.EOF, 0); }
		public PackageDeclarationContext packageDeclaration() {
			return getRuleContext(PackageDeclarationContext.class,0);
		}
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<TypeDeclarationContext> typeDeclaration() {
			return getRuleContexts(TypeDeclarationContext.class);
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return getRuleContext(TypeDeclarationContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JapperParserListener ) ((JapperParserListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JapperParserListener ) ((JapperParserListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JapperParserVisitor ) return ((JapperParserVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Package) {
				{
				setState(182);
				packageDeclaration();
				}
			}

			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Import) {
				{
				{
				setState(185);
				importDeclaration();
				}
				}
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(194);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 33)) & ~0x3f) == 0 && ((1L << (_la - 33)) & ((1L << (Private - 33)) | (1L << (Protected - 33)) | (1L << (Public - 33)) | (1L << (Enum - 33)) | (1L << (Final - 33)) | (1L << (Static - 33)) | (1L << (Abstract - 33)) | (1L << (Class - 33)) | (1L << (Interface - 33)) | (1L << (Strictfp - 33)) | (1L << (Semicolon - 33)))) != 0)) {
				{
				{
				setState(191);
				typeDeclaration();
				}
				}
				setState(196);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(197);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageDeclarationContext extends ParserRuleContext {
		public TerminalNode Package() { return getToken(JapperParser.Package, 0); }
		public VariableOrMemberNameContext variableOrMemberName() {
			return getRuleContext(VariableOrMemberNameContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(JapperParser.Semicolon, 0); }
		public PackageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JapperParserListener ) ((JapperParserListener)listener).enterPackageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JapperParserListener ) ((JapperParserListener)listener).exitPackageDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JapperParserVisitor ) return ((JapperParserVisitor<? extends T>)visitor).visitPackageDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			match(Package);
			setState(200);
			variableOrMemberName();
			setState(201);
			match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclarationContext extends ParserRuleContext {
		public TerminalNode Import() { return getToken(JapperParser.Import, 0); }
		public VariableOrMemberNameContext variableOrMemberName() {
			return getRuleContext(VariableOrMemberNameContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(JapperParser.Semicolon, 0); }
		public TerminalNode Static() { return getToken(JapperParser.Static, 0); }
		public TerminalNode DotStar() { return getToken(JapperParser.DotStar, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JapperParserListener ) ((JapperParserListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JapperParserListener ) ((JapperParserListener)listener).exitImportDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JapperParserVisitor ) return ((JapperParserVisitor<? extends T>)visitor).visitImportDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			match(Import);
			setState(205);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Static) {
				{
				setState(204);
				match(Static);
				}
			}

			setState(207);
			variableOrMemberName();
			setState(209);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DotStar) {
				{
				setState(208);
				match(DotStar);
				}
			}

			setState(211);
			match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDeclarationContext extends ParserRuleContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public EnumDeclarationContext enumDeclaration() {
			return getRuleContext(EnumDeclarationContext.class,0);
		}
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public List<AccessModifiersContext> accessModifiers() {
			return getRuleContexts(AccessModifiersContext.class);
		}
		public AccessModifiersContext accessModifiers(int i) {
			return getRuleContext(AccessModifiersContext.class,i);
		}
		public TerminalNode Semicolon() { return getToken(JapperParser.Semicolon, 0); }
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JapperParserListener ) ((JapperParserListener)listener).enterTypeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JapperParserListener ) ((JapperParserListener)listener).exitTypeDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JapperParserVisitor ) return ((JapperParserVisitor<? extends T>)visitor).visitTypeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDeclarationContext typeDeclaration() throws RecognitionException {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeDeclaration);
		int _la;
		try {
			setState(225);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Private:
			case Protected:
			case Public:
			case Enum:
			case Final:
			case Static:
			case Abstract:
			case Class:
			case Interface:
			case Strictfp:
				enterOuterAlt(_localctx, 1);
				{
				setState(216);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Private) | (1L << Protected) | (1L << Public) | (1L << Final) | (1L << Static) | (1L << Abstract) | (1L << Strictfp))) != 0)) {
					{
					{
					setState(213);
					accessModifiers();
					}
					}
					setState(218);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(222);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Class:
					{
					setState(219);
					classDeclaration();
					}
					break;
				case Enum:
					{
					setState(220);
					enumDeclaration();
					}
					break;
				case Interface:
					{
					setState(221);
					interfaceDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case Semicolon:
				enterOuterAlt(_localctx, 2);
				{
				setState(224);
				match(Semicolon);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassModifierContext extends ParserRuleContext {
		public AccessModifiersContext accessModifiers() {
			return getRuleContext(AccessModifiersContext.class,0);
		}
		public TerminalNode Native() { return getToken(JapperParser.Native, 0); }
		public TerminalNode Synchronized() { return getToken(JapperParser.Synchronized, 0); }
		public TerminalNode Transient() { return getToken(JapperParser.Transient, 0); }
		public TerminalNode Volatile() { return getToken(JapperParser.Volatile, 0); }
		public ClassModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classModifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JapperParserListener ) ((JapperParserListener)listener).enterClassModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JapperParserListener ) ((JapperParserListener)listener).exitClassModifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JapperParserVisitor ) return ((JapperParserVisitor<? extends T>)visitor).visitClassModifier(this);
			else return visitor.visitChildren(this);
		}
	}
